<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="2dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TableRow>

        <Button
            android:id="@+id/button1"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:text="@string/button1"
            style="?android:attr/buttonBarButtonStyle"
            android:backgroundTint="@color/purple_500"/>

        <Button
            android:id="@+id/button2"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/button2"
            style="?android:attr/buttonBarButtonStyle"
            android:backgroundTint="@color/purple_500"/>

        <Button
            android:id="@+id/button3"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/button3"
            style="?android:attr/buttonBarButtonStyle"
            android:backgroundTint="@color/purple_500"/>

    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/button12"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/button1"
            style="?android:attr/buttonBarButtonStyle"
            android:backgroundTint="@color/purple_500"/>

        <Button
            android:id="@+id/button22"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/button2"
            style="?android:attr/buttonBarButtonStyle"
            android:backgroundTint="@color/purple_500"/>

        <Button
            android:id="@+id/button32"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/button3"
            style="?android:attr/buttonBarButtonStyle"
            android:backgroundTint="@color/purple_500"/>

    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/button11"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/button1"
            style="?android:attr/buttonBarButtonStyle"
            android:backgroundTint="@color/purple_500"/>

        <Button
            android:id="@+id/button21"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/button2"
            style="?android:attr/buttonBarButtonStyle"
            android:backgroundTint="@color/purple_500"/>

        <Button
            android:id="@+id/button31"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/button3"
            style="?android:attr/buttonBarButtonStyle"
            android:backgroundTint="@color/purple_500" />

    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/button6"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/button1"
            android:backgroundTint="@color/purple_500"/>

        <Button
            android:id="@+id/button7"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/button2"
            android:backgroundTint="@color/purple_500"/>

        <Button
            android:id="@+id/button8"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/button3"
            android:backgroundTint="@color/purple_500"/>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/button4"
                android:backgroundTint="@color/purple_500"/>

            <Button
                android:id="@+id/button10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/button5"
                android:backgroundTint="@color/purple_500"/>
        </LinearLayout>
    </TableRow>
</TableLayout>